--- a/PAGES/4a1_define_func/index.html
+++ b/PAGES/4a1_define_func/index.html
@@ -2059,7 +2059,7 @@ color: white;
         <h2>Introduction</h2></p>
 <p>Recall that functions can be classified into  <em>i)</em> built-in functions,  <em>ii)</em> third-party functions, and  <em>iii)</em> user-defined functions. The previous section has covered the first two. <strong>We now focus on iii)</strong>.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
-      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;"><strong>Notation</strong>  </span>  </div>  <div class=content>     Developers of Julia and their packages adopt the convention of using <strong>lowercase letters for functions</strong>, such as <code>sum</code> or <code>log</code>. Note that this is only a convention, not a language&#39;s requirement.  </div>  </div>
+      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Notation</strong>  </span>  </div>  <div class=content>     Developers of Julia and their packages adopt the convention of using <strong>lowercase letters for functions</strong>, such as <code>sum</code> or <code>log</code>. Note that this is only a convention, not a language&#39;s requirement.  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -2142,7 +2142,7 @@ end</code></pre>
 <p>  </p></details></div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Remark</b> </span>  </div>  <div class=content>     Names of functions adhere to the same rules as variable names, thus permitting the use of Unicode characters. For instance, it&#39;s completely valid to define a function <code>∑&#40;x,y&#41;</code>. Indeed, most of the symbols used as operators are also available as functions. For instance, as for <a href="/julia_book/PAGES/3b_univariables/#arithmetic_operators">arithmetic operators</a>:</p>
+      <b> Remark</b> </span>  </div>  <div class=content>     Names of functions adhere to the same rules as variable names, thus permitting the use of Unicode characters. For instance, it&#39;s completely valid to define a function <code>∑&#40;x,y&#41;</code>. Indeed, most of the symbols used as operators are also available as functions. For instance, as for <a href="/julia_book/PAGES/3b_univariables/#arithmetic_operators">arithmetic operators</a>:</p>
 <p> <div class=" code_box"> <details  open><summary> Arithmetic Operators as Functions  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">&#43;&#40;2,3&#41;      # same as 2&#43;3
 -&#40;2,3&#41;      # same as 2-3
@@ -2152,7 +2152,7 @@ end</code></pre>
 <p></div> </div>  </details></div>  </div>  </div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Remark</b> </span>  </div>  <div class=content>     It&#39;s possible to define functions without arguments. For instance, </p>
+      <b> Remark</b> </span>  </div>  <div class=content>     It&#39;s possible to define functions without arguments. For instance, </p>
 <p> <div class=" code_box"> <details  open><summary> Functions without Arguments  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">function foo&#40;&#41;
     a &#61; 1
