--- a/PAGES/5a_logical/index.html
+++ b/PAGES/5a_logical/index.html
@@ -2060,7 +2060,7 @@ color: white;
 <p>This section lays the foundations for defining <strong>conditions</strong>, defined as functions and operators returning <code>true</code> or <code>false</code> as their output. An example of condition is <code>x &gt; y</code>, which returns <code>true</code> if <code>x</code> is greater than <code>y</code>, and <code>false</code> otherwise.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Remark</b> </span>  </div>  <div class=content>     For the syntax of conditions, it&#39;s worth recalling the classification of operators &#40;see <a href="/julia_book/PAGES/3a_variables/#operators">here</a> for more details&#41;. Briefly, consider a generic operator <code>&lt;operator&gt;</code> and two <code>Bool</code> variables <code>x</code> and <code>y</code>. Then, a <strong>unary operator</strong> takes only one argument and is written at the left &#40;i.e., <code>&lt;operator&gt;x</code>&#41;, while a <strong>binary operator</strong> takes two arguments and is written in the middle &#40;i.e., <code>x &lt;operator&gt; y</code>&#41;  </div>  </div>
+      <b> Remark</b> </span>  </div>  <div class=content>     For the syntax of conditions, it&#39;s worth recalling the classification of operators &#40;see <a href="/julia_book/PAGES/3a_variables/#operators">here</a> for more details&#41;. Briefly, consider a generic operator <code>&lt;operator&gt;</code> and two <code>Bool</code> variables <code>x</code> and <code>y</code>. Then, a <strong>unary operator</strong> takes only one argument and is written at the left &#40;i.e., <code>&lt;operator&gt;x</code>&#41;, while a <strong>binary operator</strong> takes two arguments and is written in the middle &#40;i.e., <code>x &lt;operator&gt; y</code>&#41;  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -2161,19 +2161,19 @@ z &#61; &#91;x &gt; 0, x &lt; 0&#93;</code></pre>
  <br/></p>
 <p> <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Remark</b> </span>  </div>  <div class=content>     The non-standard characters can be written through Tab Completion:</p>
+      <b> Remark</b> </span>  </div>  <div class=content>     The non-standard characters can be written through Tab Completion:</p>
 <ul>
-<li><p><code>≠</code> using <code>\ne</code> </p>
+<li><p><code>≠</code> via <code>\ne</code>, which stands for &quot;not equal&quot;,</p>
 </li>
-<li><p><code>≥</code> using <code>\ge</code> </p>
+<li><p><code>≥</code> via <code>\ge</code>, which stands for &quot;greater or equal&quot;, </p>
 </li>
-<li><p><code>≤</code> using <code>\le</code>  </div>  </div></p>
+<li><p><code>≤</code> via <code>\le</code>, which stands for &quot;lower or equal&quot;.  </div>  </div></p>
 </li>
 </ul>
 
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Remark</b> </span>  </div>  <div class=content>     Comparison operators are also available as functions. For instance, the following are all valid:  <div class=" code_box"> <details  open><summary> Comparison Operators as Functions  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
+      <b> Remark</b> </span>  </div>  <div class=content>     Comparison operators are also available as functions. For instance, the following are all valid:  <div class=" code_box"> <details  open><summary> Comparison Operators as Functions  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">&#61;&#61;&#40;1,2&#41;     # same as 1 &#61;&#61; 2
  ≠&#40;1,2&#41;     # same as 1 ≠ 2
  ≥&#40;1,2&#41;     # same as 1 ≥ 2
@@ -2372,7 +2372,7 @@ is_one_positive  &#61; any&#40;x .&gt; 0&#41;</code></pre>
 <p></div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>are_all_positive</code><br/><div class="akin_to_pre">false</div> </div><br/> <div class="julia_repl_NoFormat"> <span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>is_one_positive</code><br/><div class="akin_to_pre">true</div> </div></div> </div>   </details></div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Remark</b> </span>  </div>  <div class=content>     It&#39;s possible to implement the behavior of <code>all</code> and <code>any</code> through functions accepting multiple arguments. This can be respectively done through the functions <code>min</code> and <code>max</code>, which return the minimum or maximum value of their arguments. For instance:</p>
+      <b> Remark</b> </span>  </div>  <div class=content>     It&#39;s possible to implement the behavior of <code>all</code> and <code>any</code> through functions accepting multiple arguments. This can be respectively done through the functions <code>min</code> and <code>max</code>, which return the minimum or maximum value of their arguments. For instance:</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">a &#61;  1
 b &#61; -1
