--- a/PAGES/6e_useful_funs/index.html
+++ b/PAGES/6e_useful_funs/index.html
@@ -2519,7 +2519,7 @@ y &#61; ordinalrank&#40;x, rev&#61;true&#41;</code></pre> </div></div>
  </div></div>
 <p>  </p></details></div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
-      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;"><strong>Do not confuse <code>ordinalrank</code> and <code>sortperm</code></strong>  </span>  </div>  <div class=content>     The function <code>ordinalrank</code> indicates the position of each value in the  <em>sorted</em> vector, while <code>sortperm</code> indicates the position of each value in the  <em>unsorted</em> vector.  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
+      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Do not confuse <code>ordinalrank</code> and <code>sortperm</code></strong>  </span>  </div>  <div class=content>     The function <code>ordinalrank</code> indicates the position of each value in the  <em>sorted</em> vector, while <code>sortperm</code> indicates the position of each value in the  <em>unsorted</em> vector.  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
     <button class="tablink first_tab active" data-id=""> ordinalrank </button>
