--- a/PAGES/6f_pipes/index.html
+++ b/PAGES/6f_pipes/index.html
@@ -2112,7 +2112,7 @@ end</code></pre> </div></div>
  </div></div>
 <p>  </p></details></div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
-      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;"><strong>Let Blocks Can Mutate Variables</strong>  </span>  </div>  <div class=content>     Let blocks behave like functions regarding assignments and mutation: you can mutate its arguments, although you can&#39;t reassign their values. </p>
+      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Let Blocks Can Mutate Variables</strong>  </span>  </div>  <div class=content>     Let blocks behave like functions regarding assignments and mutation: you can mutate its arguments, although you can&#39;t reassign their values. </p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
