--- a/PAGES/7c_gotchas/index.html
+++ b/PAGES/7c_gotchas/index.html
@@ -2005,7 +2005,7 @@ color: white;
 <div class="franklin-content">
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Remark</b> </span>  </div>  <div class=content>     This section&#39;s scripts are available <a href="https://github.com/alfaromartino/julia_book/tree/main//assets/PAGES/7c_gotchas/codeDownload"><strong>here</strong></a>, under the name <code>allCode.jl</code>. They&#39;ve been tested under Julia 1.10.0.  </div>  </div>
+      <b> Remark</b> </span>  </div>  <div class=content>     This section&#39;s scripts are available <a href="https://github.com/alfaromartino/julia_book/tree/main//assets/PAGES/7c_gotchas/codeDownload"><strong>here</strong></a>, under the name <code>allCode.jl</code>. They&#39;ve been tested under Julia 1.10.0.  </div>  </div>
 <section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
@@ -2347,7 +2347,7 @@ const β &#61; 1
  </div></div>
 <p>  </p></details></div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
-      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;"><strong>Positional Arguments as Keyword Arguments</strong>  </span>  </div>  <div class=content>     It&#39;s possible to reuse positional arguments as default values for keyword arguments without compromising type instability. </p>
+      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Positional Arguments as Keyword Arguments</strong>  </span>  </div>  <div class=content>     It&#39;s possible to reuse positional arguments as default values for keyword arguments without compromising type instability. </p>
 <p>Based on this, we can propose the following solution to the code above, where <code>β</code> is introduced as a positional argument.</p>
 <p> <div class=" code_box"> <details  open><summary> Type Stable  </summary> <div class="code_inline"><div class="code_NoFormat"><pre><code class="language-julia">foo&#40;β; x &#61; β&#41; &#61; x
 
