--- a/PAGES/3b_univariables/index.html
+++ b/PAGES/3b_univariables/index.html
@@ -2067,15 +2067,18 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Numbers</h2></p>
-<p>Computers employ various representations for numbers, and treat integers and real numbers as separate entities. Furthermore, even within these numbers, several representations arise depending on the level of precision aimed. This ultimately establishes the maximum range or decimal numbers that a data type supports. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> For instance, an 8-bit positive integer can&#39;t be larger than 255. Likewise, a 32-bit floating-point number can have up to 7 significant digits.  </span></span>  These features extend well beyond Julia, and arise from how computers operate at a fundamental level. </p>
+<p>Computers employ various representations for numbers, and treat integers and real numbers as separate entities. Furthermore, even within these numbers, several representations arise depending on the level of precision aimed. This is captured by the number of bits in memory that a number takes up, ultimately establishing the maximum range or decimal numbers that a data type supports. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> For instance, an 8-bit integer can only represent values between –128 to 127. Likewise, a 32-bit floating-point number can have up to 7 significant digits.  </span></span>  These features extend well beyond Julia, and arise from how computers operate at a fundamental level. </p>
 <p>Numeric types in Julia have a default precision of 64 bits in modern computers. They&#39;re defined as:</p>
 <ul>
-<li><p><code>Int64</code> for integers.</p>
+<li><p><code>Int64</code> for integers. </p>
 </li>
 <li><p><code>Float64</code> for decimal numbers. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The term &quot;Float&quot; stands for &quot;<a href="https://en.wikipedia.org/wiki/Double-precision_floating-point_format">Floating Point</a>&quot;, and is how computers represent decimal numbers.  </span></span></p>
 </li>
 </ul>
-<p>It&#39;s worth emphasizing that <code>Int64</code> and <code>Float64</code> are two different data types. Thus, while <code>1</code> is a value with type <code>Int64</code>, the same number must be expressed as <code>1.0</code> to get a <code>Float64</code> type.</p>
+ <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
+      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
+      <b> Remark</b> </span>  </div>  <div class=content>     You can simply use <code>Int</code> as a shorthand for <code>Int64</code>. In fact, <code>Int</code> is a more versatile type, as it adapts to the architecture of your computer and determines whether the default integer type should be <code>Int64</code> or <code>Int32</code>. On most modern machines, <code>Int</code> defaults to <code>Int64</code>  </div>  </div>
+<p>It&#39;s worth emphasizing that <code>Int64</code> and <code>Float64</code> are two different data types.  Thus, while <code>1</code> is a value with type <code>Int64</code>, the same number must be expressed as <code>1.0</code> to get a <code>Float64</code> type.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; 1       # &#96;Int64&#96;
 
@@ -2084,7 +2087,7 @@ z &#61; 1.      # alternative notation for &#96;1.0&#96;</code></pre>
 <p></div> </div>  </details></div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Remark</b> </span>  </div>  <div class=content>     To improve code readability, you can separate long numbers by inserting underscores <code>_</code>. The addition of <code>_</code> has no impact on the number.</p>
+      <b> Remark</b> </span>  </div>  <div class=content>     To enhance code readability, you can break up long numbers by inserting underscores <code>_</code>. The addition of <code>_</code> has no impact on the code executed.</p>
 <p> <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; 1000000               
 y &#61; 1_000_000             # equivalent to &#96;x&#96; and more readable
