--- a/PAGES/6d_application01/index.html
+++ b/PAGES/6d_application01/index.html
@@ -2054,7 +2054,7 @@ color: white;
 <div class="franklin-content">
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Remark</b> </span>  </div>  <div class=content>     This section&#39;s scripts are available <a href="https://github.com/alfaromartino/julia_book/tree/main//assets/PAGES/6d_application01/codeDownload"><strong>here</strong></a>, under the name <code>allCode.jl</code>. They&#39;ve been tested under Julia 1.10.0.  </div>  </div>
+      <b> Remark</b> </span>  </div>  <div class=content>     This section&#39;s scripts are available <a href="https://github.com/alfaromartino/julia_book/tree/main//assets/PAGES/6d_application01/codeDownload"><strong>here</strong></a>, under the name <code>allCode.jl</code>. They&#39;ve been tested under Julia 1.10.0.  </div>  </div>
 <section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
@@ -2226,7 +2226,7 @@ is_viral_lucrative &#61; &#40;views_per_video .≥ viral_threshold&#41; .&amp;&a
 # stat
 proportion_viral_lucrative &#61; sum&#40;is_viral_lucrative&#41; / sum&#40;is_viral&#41; * 100</code></pre> </div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><span style="color:rgb(32, 198, 121) !important; font-weight: bold;">julia&gt</span> <code>proportion_viral_lucrative</code> <br/> <pre><code class="plaintext code-output">83.3333</code></pre> </div></div> </div>   </details></div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
-      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;"><strong>Rounding Outputs</strong>  </span>  </div>  <div class=content>     You can express results with rounded numbers via the function <code>round</code>. By default, this returns the nearest integer expressed as a <code>Float64</code> number. </p>
+      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Rounding Outputs</strong>  </span>  </div>  <div class=content>     You can express results with rounded numbers via the function <code>round</code>. By default, this returns the nearest integer expressed as a <code>Float64</code> number. </p>
 <p>The function also offers additional specifications. For instance, you can control the number of decimal places in the approximation using the <code>digits</code> keyword argument. Furthermore, it&#39;s possible to represent the number as an <code>Int64</code> using the argument <code>Int</code>.</p>
 <p> <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2359,7 +2359,7 @@ targetNonViral  &#61; stats_subset&#40;new_views, pay_per_views, allvideos&#41;<
  </div></div>
 <p>  </p></details></div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
-      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;"><strong>Be Careful with Miuses of 'view'</strong>  </span>  </div>  <div class=content>     Updating <code>temp</code> requires an in-place operation to mutate the parent object. In our case, this was achieved via the broadcasted operator <code>.&#61;</code>. Below, we state some implementations that fail to produce the desired result. </p>
+      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Be Careful with Miuses of 'view'</strong>  </span>  </div>  <div class=content>     Updating <code>temp</code> requires an in-place operation to mutate the parent object. In our case, this was achieved via the broadcasted operator <code>.&#61;</code>. Below, we state some implementations that fail to produce the desired result. </p>
 <p> <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2387,7 +2387,7 @@ temp  &#61; temp .* 1.2             # it creates a new variable &#39;temp&#39;, 
  </div></div>
 <p>  </p></details></div>  </div>  </div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
-      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;"><strong>Use of "Let Blocks" To Avoid Bugs</strong>  </span>  </div>  <div class=content>     The code for &quot;Target Virals&quot; and &quot;Target Non-Virals&quot; referred to each variable by an identical name. This increases the risk of accidentally referring to a variable from a different scenario. The likelihood of incurring thisissue can be alleviated by employing &quot;let blocks&quot;. By defining their own scope, they help maintain a clean namespace.</p>
+      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Use of "Let Blocks" To Avoid Bugs</strong>  </span>  </div>  <div class=content>     The code for &quot;Target Virals&quot; and &quot;Target Non-Virals&quot; referred to each variable by an identical name. This increases the risk of accidentally referring to a variable from a different scenario. The likelihood of incurring thisissue can be alleviated by employing &quot;let blocks&quot;. By defining their own scope, they help maintain a clean namespace.</p>
 <p> <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
