--- a/PAGES/4a0_packages/index.html
+++ b/PAGES/4a0_packages/index.html
@@ -2067,6 +2067,8 @@ color: white;
 </li>
 </ol></div>
 <p><strong>This section focuses on i) and ii)</strong>, relegating iii&#41; to the next section. We consider in particular how to apply functions, which in turn takes us to the discussion of packages. </p>
+ <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
+      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Notation for Functions</strong>  </span>  </div>  <div class=content>     Julia&#39;s developers suggest a <strong>snake-case</strong> format for function names. This format consists of lowercase letters, numbers, and possibly underscores to separate words. For instance, <code>snake_case_foo1</code>. Note that this is only a convention, not a language&#39;s requirement.  </div>  </div>
 <p>      </div>
     </div>
   </div>
